2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Switch to larger 8x14 font.

	* graph/grconfig.h (GR_FONT_SIZE): New option defined as 14.
	* graph/grfont.[ch]: Add another font size.

2020-11-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (main): Enforce rgb24.

2020-11-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/*, graph/*: s/unsigned int/size_t/ where appropriate.

2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/*.*: s/0/NULL/ where appropriate.

2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/*.*: Rearrange some headers.

2020-11-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ttdebug.c (Cur_U_Line, RunIns): Reset buffers explicitly.

2020-11-04  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Fix typos introduced 2020-09-17.

	* src/ttdebug.c (display_changed_points): Use correct point arrays
	again.

2020-11-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grblit.c (blit_gray8_to_{555,565}): Fix color.

2020-11-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Add 15-bit mode to `gblblit'.

	No target depths left for legacy `grblit' except mono, pal4, pal8.

	* graph/gblblit.[ch]: Set up rgb555 target mode (instead of bgr565).

2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_done): Free the bitmap here...
	* src/ftcommon.c (FTDemo_Display_Done): ... rather than here.

2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Fix PNG dump from 32-bit display.

	* src/ftcommon.c (FTDemo_Display_Print): The 32-bit mode needs
	transformations to account for endianness and skip the top byte.

2020-10-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/win32/grwin32.c (gr_win32_surface_init): Default to BITSPIXEL.

2020-10-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Let the driver set convenient depth.

	Let the driver change `gr_pixel_mode_none' to whatever depth is