@@ -1,5 +1,12 @@
 2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
+	[ftgrid,ftmulti,ftdiff] Fix up layout for the larger font.
+
+	* src/ftgrid.c (DO_DOTNUMBERS): Rely on GR_FONT_SIZE.
+	* src/ftmulti.c, src/ftdiff.c: Use HEADER_HEIGHT equal to 12.
+
+2020-11-06  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
 	[graph] Switch to larger 8x14 font.
 
 	* graph/grconfig.h (GR_FONT_SIZE): New option defined as 14.
